# bloggers-crm-backend

./: .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
assistants/: manager.txt  parser.txt
src/: llm.py  main.py  schemas.py  websocket.py
src/database/: chats.py  db_connection.py  deals.py  messages.py
src/services/: assistant_cache.py  chats.py  connection_manager.py  database.py  deals.py  env.py  llm.py  saved_messages.py  users.py  websocket.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20250621203402_initial.sql  20250622051335_shared_chats.sql  20250622132100_messages_types.sql  20250622184828_parallel_threads.sql
